added worst by count

--- a/finServiceComplaints.ipynb
+++ b/finServiceComplaints.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +280,7 @@
        "4       3146310  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,16 +329,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011-12-01\n",
+      "2020-02-29\n"
+     ]
+    }
+   ],
    "source": [
-    "grouped = df.groupby('Company').count()[['Issue']]"
+    "print(df['Date received'].min())\n",
+    "print(df['Date received'].max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_grouped = df.groupby('Company').count()[['Issue']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df_grouped.sort_values('Issue', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.insert(loc=1, column='Worst', value=np.arange(len(df1)) +1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -390,32 +428,67 @@
        "      <td>76625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <td>JPMORGAN CHASE &amp; CO.</td>\n",
+       "      <td>66665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Shop Your Own Corp</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CITIBANK, N.A.</td>\n",
+       "      <td>54764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>BELMONT FINANCE LLC</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CAPITAL ONE FINANCIAL CORPORATION</td>\n",
+       "      <td>41312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>First Advantage Title Partners, LLC</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Navient Solutions, LLC.</td>\n",
+       "      <td>31845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Shenandoah Legal Group, P.C.</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Ocwen Financial Corporation</td>\n",
+       "      <td>29265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Ralis Services Corporation</td>\n",
-       "      <td>1</td>\n",
+       "      <td>SYNCHRONY FINANCIAL</td>\n",
+       "      <td>25582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>NATIONSTAR MORTGAGE</td>\n",
+       "      <td>21844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>U.S. BANCORP</td>\n",
+       "      <td>19226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>AMERICAN EXPRESS COMPANY</td>\n",
+       "      <td>15964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ditech Financial LLC</td>\n",
+       "      <td>14767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PNC Bank N.A.</td>\n",
+       "      <td>12993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ENCORE CAPITAL GROUP INC.</td>\n",
+       "      <td>12796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DISCOVER BANK</td>\n",
+       "      <td>12156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PORTFOLIO RECOVERY ASSOCIATES INC</td>\n",
+       "      <td>12148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TD BANK US HOLDING COMPANY</td>\n",
+       "      <td>11275</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5551 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -426,23 +499,30 @@
        "TRANSUNION INTERMEDIATE HOLDINGS, INC.  132287\n",
        "BANK OF AMERICA, NATIONAL ASSOCIATION    88680\n",
        "WELLS FARGO & COMPANY                    76625\n",
-       "...                                        ...\n",
-       "Shop Your Own Corp                           1\n",
-       "BELMONT FINANCE LLC                          1\n",
-       "First Advantage Title Partners, LLC          1\n",
-       "Shenandoah Legal Group, P.C.                 1\n",
-       "Ralis Services Corporation                   1\n",
-       "\n",
-       "[5551 rows x 1 columns]"
+       "JPMORGAN CHASE & CO.                     66665\n",
+       "CITIBANK, N.A.                           54764\n",
+       "CAPITAL ONE FINANCIAL CORPORATION        41312\n",
+       "Navient Solutions, LLC.                  31845\n",
+       "Ocwen Financial Corporation              29265\n",
+       "SYNCHRONY FINANCIAL                      25582\n",
+       "NATIONSTAR MORTGAGE                      21844\n",
+       "U.S. BANCORP                             19226\n",
+       "AMERICAN EXPRESS COMPANY                 15964\n",
+       "Ditech Financial LLC                     14767\n",
+       "PNC Bank N.A.                            12993\n",
+       "ENCORE CAPITAL GROUP INC.                12796\n",
+       "DISCOVER BANK                            12156\n",
+       "PORTFOLIO RECOVERY ASSOCIATES INC        12148\n",
+       "TD BANK US HOLDING COMPANY               11275"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped.sort_values('Issue', ascending=False)"
+    "df1"
    ]
   },
   {
