--- a/finServiceComplaints.ipynb
+++ b/finServiceComplaints.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "TD BANK US HOLDING COMPANY                     11275      20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,16 +623,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f43a2022d10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f563fc30ed0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,26 +692,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df.loc[df['Company'] == dfT20['Company'][0]]"
+    "def plotLine(company,df):\n",
+    "    #adds a company line to the chart\n",
+    "    dfC = df.loc[df['Company'] == company]\n",
+    "    dfC_dates = dfC.groupby('Date').count()[['Complaint ID']]\n",
+    "    dfC_dates = dfC_dates.reset_index()\n",
+    "    return dfC_dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1_dates = df1.groupby('Date').count()[['Complaint ID']]\n",
-    "df1_dates = df1_dates.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -817,27 +812,29 @@
        "[2679 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#df1 = df.loc[df['Company'] == dfT20['Company'][0]]\n",
+    "df1_dates = plotLine(dfT20['Company'][0], df)\n",
     "df1_dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f43a12039d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f563fad8110>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,7 +856,8 @@
     "fig = plt.gcf()\n",
     "fig.set_size_inches(10, 10)\n",
     "ax = plt.gca()\n",
-    "df_issues_dates.plot(kind='line',x='Date',y='Issue Counts',ax=ax)\n",
+    "df_issues_dates.plot(kind\n",
+    "                     ='line',x='Date',y='Issue Counts',ax=ax)\n",
     "df1_dates = df1_dates.rename(columns={'Complaint ID':dfT20['Company'][0]})\n",
     "df1_dates.plot(kind='line',x='Date',y=dfT20['Company'][0],color='red', ax=ax)"
    ]
