--- a/finServiceComplaints-Part2.ipynb
+++ b/finServiceComplaints-Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting mergeCompanies.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load mergeCompanies.py\n",
+    "# %load mergeCompanies.py\n",
     "def mergeCompanies(dfT,n,df):\n",
     "    columns = ['Date']\n",
     "    dfm = pd.DataFrame(columns=columns)\n",
@@ -80,12 +72,12 @@
     "        dfm = pd.merge(dfm, df1, on='Date', how='outer')\n",
     "        i += 1\n",
     "    dfm = dfm.fillna(0)\n",
-    "    return dfm  "
+    "    return dfm  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
