--- a/finServiceComplaints-Part2.ipynb
+++ b/finServiceComplaints-Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,76 +15,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date received</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Sub-product</th>\n",
+       "      <th>Issue</th>\n",
+       "      <th>Sub-issue</th>\n",
+       "      <th>Consumer complaint narrative</th>\n",
+       "      <th>Company public response</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>State</th>\n",
+       "      <th>ZIP code</th>\n",
+       "      <th>Tags</th>\n",
+       "      <th>Consumer consent provided?</th>\n",
+       "      <th>Submitted via</th>\n",
+       "      <th>Date sent to company</th>\n",
+       "      <th>Company response to consumer</th>\n",
+       "      <th>Timely response?</th>\n",
+       "      <th>Consumer disputed?</th>\n",
+       "      <th>Complaint ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-09-24</td>\n",
+       "      <td>Debt collection</td>\n",
+       "      <td>I do not know</td>\n",
+       "      <td>Attempts to collect debt not owed</td>\n",
+       "      <td>Debt is not yours</td>\n",
+       "      <td>transworld systems inc. \\nis trying to collect...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRANSWORLD SYSTEMS INC</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>335XX</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Consent provided</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2019-09-24</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3384392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Credit reporting, credit repair services, or o...</td>\n",
+       "      <td>Credit reporting</td>\n",
+       "      <td>Incorrect information on your report</td>\n",
+       "      <td>Information belongs to someone else</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Company has responded to the consumer and the ...</td>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15206</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Consent not provided</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Closed with non-monetary relief</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3379500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-10-25</td>\n",
+       "      <td>Credit reporting, credit repair services, or o...</td>\n",
+       "      <td>Credit reporting</td>\n",
+       "      <td>Incorrect information on your report</td>\n",
+       "      <td>Information belongs to someone else</td>\n",
+       "      <td>I would like to request the suppression of the...</td>\n",
+       "      <td>Company has responded to the consumer and the ...</td>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>937XX</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Consent provided</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2019-10-25</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3417821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-11-08</td>\n",
+       "      <td>Debt collection</td>\n",
+       "      <td>I do not know</td>\n",
+       "      <td>Communication tactics</td>\n",
+       "      <td>Frequent or repeated calls</td>\n",
+       "      <td>Over the past 2 weeks, I have been receiving e...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Diversified Consultants, Inc.</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>275XX</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Consent provided</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2019-11-08</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3433198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-02-08</td>\n",
+       "      <td>Vehicle loan or lease</td>\n",
+       "      <td>Lease</td>\n",
+       "      <td>Problem with a credit reporting company's inve...</td>\n",
+       "      <td>Their investigation did not fix an error on yo...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HYUNDAI CAPITAL AMERICA</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>33161</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Consent not provided</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2019-02-08</td>\n",
+       "      <td>Closed with non-monetary relief</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3146310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Date received                                            Product  \\\n",
+       "0    2019-09-24                                    Debt collection   \n",
+       "1    2019-09-19  Credit reporting, credit repair services, or o...   \n",
+       "2    2019-10-25  Credit reporting, credit repair services, or o...   \n",
+       "3    2019-11-08                                    Debt collection   \n",
+       "4    2019-02-08                              Vehicle loan or lease   \n",
+       "\n",
+       "        Sub-product                                              Issue  \\\n",
+       "0     I do not know                  Attempts to collect debt not owed   \n",
+       "1  Credit reporting               Incorrect information on your report   \n",
+       "2  Credit reporting               Incorrect information on your report   \n",
+       "3     I do not know                              Communication tactics   \n",
+       "4             Lease  Problem with a credit reporting company's inve...   \n",
+       "\n",
+       "                                           Sub-issue  \\\n",
+       "0                                  Debt is not yours   \n",
+       "1                Information belongs to someone else   \n",
+       "2                Information belongs to someone else   \n",
+       "3                         Frequent or repeated calls   \n",
+       "4  Their investigation did not fix an error on yo...   \n",
+       "\n",
+       "                        Consumer complaint narrative  \\\n",
+       "0  transworld systems inc. \\nis trying to collect...   \n",
+       "1                                                NaN   \n",
+       "2  I would like to request the suppression of the...   \n",
+       "3  Over the past 2 weeks, I have been receiving e...   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                             Company public response  \\\n",
+       "0                                                NaN   \n",
+       "1  Company has responded to the consumer and the ...   \n",
+       "2  Company has responded to the consumer and the ...   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                  Company State ZIP code Tags  \\\n",
+       "0                  TRANSWORLD SYSTEMS INC    FL    335XX  NaN   \n",
+       "1     Experian Information Solutions Inc.    PA    15206  NaN   \n",
+       "2  TRANSUNION INTERMEDIATE HOLDINGS, INC.    CA    937XX  NaN   \n",
+       "3           Diversified Consultants, Inc.    NC    275XX  NaN   \n",
+       "4                 HYUNDAI CAPITAL AMERICA    FL    33161  NaN   \n",
+       "\n",
+       "  Consumer consent provided? Submitted via Date sent to company  \\\n",
+       "0           Consent provided           Web           2019-09-24   \n",
+       "1       Consent not provided           Web           2019-09-20   \n",
+       "2           Consent provided           Web           2019-10-25   \n",
+       "3           Consent provided           Web           2019-11-08   \n",
+       "4       Consent not provided           Web           2019-02-08   \n",
+       "\n",
+       "      Company response to consumer Timely response? Consumer disputed?  \\\n",
+       "0          Closed with explanation              Yes                NaN   \n",
+       "1  Closed with non-monetary relief              Yes                NaN   \n",
+       "2          Closed with explanation              Yes                NaN   \n",
+       "3          Closed with explanation              Yes                NaN   \n",
+       "4  Closed with non-monetary relief              Yes                NaN   \n",
+       "\n",
+       "   Complaint ID  \n",
+       "0       3384392  \n",
+       "1       3379500  \n",
+       "2       3417821  \n",
+       "3       3433198  \n",
+       "4       3146310  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# %load date.py\n",
-    "df['Date'] = pd.to_datetime(df['Date received'],infer_datetime_format=True)\n",
-    "df_grouped = df.groupby('Company').count()[['Complaint ID']]\n",
-    "df_issues_dates = df.groupby('Date').count()[['Complaint ID']]\n",
-    "df_issues_dates = df_issues_dates.reset_index()\n",
-    "df_issues_dates = df_issues_dates.rename(columns={'Complaint ID':\"Issue Counts\"})"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load top20.py\n",
-    "dfT20 = df_grouped.sort_values('Complaint ID', ascending=False).head(20)\n",
-    "dfT20.insert(loc=1, column='Top 20', value=np.arange(len(dfT20)) +1)\n",
-    "dfT20.rename(columns={'Complaint ID':\"Issue Counts\"})\n",
-    "dfT20 = dfT20.reset_index()\n",
-    "dfAT20 = df.loc[df['Company'].isin(dfT20['Company'])] #reduce original data to T20\n"
+    "dfg = df.groupby('Company').count()[['Complaint ID']]\n",
+    "dfg = dfg.rename(columns={'Complaint ID': \"Issue Counts\"})\n",
+    "dfg = dfg.sort_values('Issue Counts', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Issue Counts</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Company</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>EQUIFAX, INC.</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>0.888089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>0.865593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BANK OF AMERICA, NATIONAL ASSOCIATION</td>\n",
+       "      <td>0.580257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>WELLS FARGO &amp; COMPANY</td>\n",
+       "      <td>0.501377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Shop Your Own Corp</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BELMONT FINANCE LLC</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>First Advantage Title Partners, LLC</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Shenandoah Legal Group, P.C.</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ralis Services Corporation</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5551 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Issue Counts\n",
+       "Company                                             \n",
+       "EQUIFAX, INC.                               1.000000\n",
+       "Experian Information Solutions Inc.         0.888089\n",
+       "TRANSUNION INTERMEDIATE HOLDINGS, INC.      0.865593\n",
+       "BANK OF AMERICA, NATIONAL ASSOCIATION       0.580257\n",
+       "WELLS FARGO & COMPANY                       0.501377\n",
+       "...                                              ...\n",
+       "Shop Your Own Corp                          0.000000\n",
+       "BELMONT FINANCE LLC                         0.000000\n",
+       "First Advantage Title Partners, LLC         0.000000\n",
+       "Shenandoah Legal Group, P.C.                0.000000\n",
+       "Ralis Services Corporation                  0.000000\n",
+       "\n",
+       "[5551 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# %load pickCompany.py\n",
-    "def pickCompany(company,df):\n",
-    "    dfC = df.loc[df['Company'] == company]\n",
-    "    dfC_dates = dfC.groupby('Date').count()[['Complaint ID']]\n",
-    "    dfC_dates = dfC_dates.reset_index()\n",
-    "    dfC_dates = dfC_dates.rename(columns={'Complaint ID':company}) \n",
-    "    return dfC_dates\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load mergeCompanies.py\n",
-    "def mergeCompanies(dfT,n,df):\n",
-    "    columns = ['Date']\n",
-    "    dfm = pd.DataFrame(columns=columns)\n",
-    "    i=0\n",
-    "    while i<n:\n",
-    "        df1 = pickCompany(dfT['Company'][i], df)\n",
-    "        dfm = pd.merge(dfm, df1, on='Date', how='outer')\n",
-    "        i += 1\n",
-    "    dfm = dfm.fillna(0)\n",
-    "    return dfm  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "nCompanies=20\n",
-    "dfm = mergeCompanies(dfT20,nCompanies,df)\n",
-    "dfm_reduced = dfm.drop(columns=['EQUIFAX, INC.','Navient Solutions, LLC.'])"
+    "dfgNorm=(dfg-dfg.min())/(dfg.max()-dfg.min()) #min-max normalization\n",
+    "dfgNorm"
    ]
   }
  ],
