--- a/finServiceComplaints-Part2.ipynb
+++ b/finServiceComplaints-Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "4       3146310  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,18 +245,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>All_Issues</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2011-12-01</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2011-12-02</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2011-12-03</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2011-12-04</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2011-12-05</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-25</td>\n",
+       "      <td>326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-27</td>\n",
+       "      <td>172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-28</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3012 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            All_Issues\n",
+       "Date                  \n",
+       "2011-12-01         120\n",
+       "2011-12-02         138\n",
+       "2011-12-03          26\n",
+       "2011-12-04          22\n",
+       "2011-12-05         164\n",
+       "...                ...\n",
+       "2020-02-25         326\n",
+       "2020-02-26         302\n",
+       "2020-02-27         172\n",
+       "2020-02-28          29\n",
+       "2020-02-29           3\n",
+       "\n",
+       "[3012 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dfg = df.groupby('Company').count()[['Complaint ID']]\n",
-    "dfg = dfg.rename(columns={'Complaint ID': \"Issue Counts\"})\n",
-    "dfg = dfg.sort_values('Issue Counts', ascending=False)"
+    "df['Date'] = pd.to_datetime(df['Date received'],infer_datetime_format=True)\n",
+    "df = df.rename(columns={'Complaint ID': 'All_Issues'})\n",
+    "\n",
+    "dfg = df.groupby('Date').count()[['All_Issues']]\n",
+    "dfg\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +458,7 @@
        "[5551 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,6 +466,27 @@
    "source": [
     "dfgNorm=(dfg-dfg.min())/(dfg.max()-dfg.min()) #min-max normalization\n",
     "dfgNorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Issue Counts']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = list(dfgNorm.columns)\n",
+    "cols"
    ]
   }
  ],
